Add hamburger menu for mobile navigation

--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
             </svg>
           </a>
         </div>
+        <div class="menu_hamburger ">
+          <span class="top_line hamburger_line"></span>
+          <span class="middle_line hamburger_line"></span>
+          <span class="bottom_line hamburger_line"></span>
+
+        </div>
+          
       </div>
     </header>
     <main>
@@ -462,5 +469,6 @@
           </ul>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
