--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="container">
-        <a class="logo" href="#">
+        <a class="logo" href="/">
           <img src="assets/logo-white.png" alt="logo-white" />
         </a>
         <nav>
@@ -121,6 +121,12 @@
               </g>
             </svg>
           </a>
+        </div>
+         <div class="menu_hamburger ">
+          <span class="top_line hamburger_line"></span>
+          <span class="middle_line hamburger_line"></span>
+          <span class="bottom_line hamburger_line"></span>
+
         </div>
       </div>
     </header>
@@ -296,5 +302,7 @@
         </ul>
       </div>
     </footer>
+    <script src="script.js"></script>
+
   </body>
 </html>
