--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Larana Florist</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/55dc2932a8.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -138,7 +139,7 @@
           <p class="sub_heading">
             Flower arrangements delivered to your doorstep
           </p>
-          <a class="hero_cta" href="#">choose yours</a>
+          <a class="hero_cta" href="shop.html">choose yours</a>
         </div>
       </section>
 
@@ -270,6 +271,30 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
+      </section>
+
+      <section class="FAQs_container ">
+          <h2 class="heading">Frequently Asked Questions</h2>
+          <div class="FAQs_wrapper">
+           <div class="FAQs_card">
+             <h3 class="question">Do you offer same-day delivery? <i class="fa-solid fa-plus"></i></h3>
+             <p class="answer">Yes! I offer same-day delivery for orders placed before 2 PM
+              within Chicago city limits. Orders placed after 2 PM will be
+              delivered the next day.</p>
+           </div>
+           <div class="FAQs_card">
+             <h3 class="question">Can I customize my bouquet? <i class="fa-solid fa-plus"></i></h3>
+             <p class="answer">Absolutely! I love creating custom arrangements. You can either
+              visit my boutique or contact me online to discuss your preferences
+              and ideas.</p>
+           </div>
+           <div class="FAQs_card">
+             <h3 class="question">What flowers are in season? <i class="fa-solid fa-plus"></i></h3>
+             <p class="answer">The flowers available vary by season. I always use the freshest
+              and most beautiful blooms that are in season to create my
+              arrangements. Feel free to ask me about seasonal options!</p>
+           </div>
+          </div>
       </section>
 
       <section class="review_container">
