--- a/shop.html
+++ b/shop.html
@@ -9,12 +9,12 @@
   <body style="background-color: #1b3029">
     <header class="shop_header container">
       <div class="container">
-        <a class="logo" href="#"
+        <a class="logo" href="/"
           ><img src="assets/logo-white.png" alt="logo-white"
         /></a>
         <nav>
           <ul class="navigation">
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Shop</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -121,6 +121,12 @@
               </g>
             </svg>
           </a>
+        </div>
+         <div class="menu_hamburger ">
+          <span class="top_line hamburger_line"></span>
+          <span class="middle_line hamburger_line"></span>
+          <span class="bottom_line hamburger_line"></span>
+
         </div>
       </div>
     </header>
@@ -323,5 +329,7 @@
         </ul>
       </div>
     </footer>
+    <script src="script.js"></script>
+
   </body>
 </html>
