update homepage link

--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
   <body style="background-color: #1b3029">
     <header class="shop_header container">
       <div class="container">
-        <a class="logo" href="/"
+        <a class="logo" href="index.html"
           ><img src="assets/logo-white.png" alt="logo-white"
         /></a>
         <nav>
