--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="container">
-        <a class="logo" href="/">
+        <a class="logo" href="index.html">
           <img src="assets/logo-white.png" alt="logo-white" />
         </a>
         <nav>
