--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <header>
       <div class="container">
-        <a class="logo" href="#">
+        <a class="logo" href="index.html">
           <img src="assets/logo-white.png" alt="logo-white" />
         </a>
         <nav>
           <ul class="navigation">
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
