--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Larana Florist</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/55dc2932a8.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/55dc2932a8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -123,13 +126,11 @@
             </svg>
           </a>
         </div>
-        <div class="menu_hamburger ">
+        <div class="menu_hamburger">
           <span class="top_line hamburger_line"></span>
           <span class="middle_line hamburger_line"></span>
           <span class="bottom_line hamburger_line"></span>
-
         </div>
-          
       </div>
     </header>
     <main>
@@ -150,19 +151,19 @@
             <div class="creations_card creations_card_1">
               <div class="creations_card_wrapper">
                 <h3 class="heading">Birthday flowers</h3>
-                <a class="creations_card_btn" href="#">see all</a>
+                <a class="creations_card_btn" href="shop.html">see all</a>
               </div>
             </div>
             <div class="creations_card creations_card_2">
               <div class="creations_card_wrapper">
                 <h3 class="heading">Roses</h3>
-                <a class="creations_card_btn" href="#">see all</a>
+                <a class="creations_card_btn" href="shop.html">see all</a>
               </div>
             </div>
             <div class="creations_card creations_card_3">
               <div class="creations_card_wrapper">
                 <h3 class="heading">Signature bouquets</h3>
-                <a class="creations_card_btn" href="#">see all</a>
+                <a class="creations_card_btn" href="shop.html">see all</a>
               </div>
             </div>
           </div>
@@ -273,28 +274,40 @@
         </div>
       </section>
 
-      <section class="FAQs_container ">
-          <h2 class="heading">Frequently Asked Questions</h2>
-          <div class="FAQs_wrapper">
-           <div class="FAQs_card">
-             <h3 class="question">Do you offer same-day delivery? <i class="fa-solid fa-plus"></i></h3>
-             <p class="answer">Yes! I offer same-day delivery for orders placed before 2 PM
+      <section class="FAQs_container">
+        <h2 class="heading">Frequently Asked Questions</h2>
+        <div class="FAQs_wrapper">
+          <div class="FAQs_card">
+            <h3 class="question">
+              Do you offer same-day delivery? <i class="fa-solid fa-plus"></i>
+            </h3>
+            <p class="answer">
+              Yes! I offer same-day delivery for orders placed before 2 PM
               within Chicago city limits. Orders placed after 2 PM will be
-              delivered the next day.</p>
-           </div>
-           <div class="FAQs_card">
-             <h3 class="question">Can I customize my bouquet? <i class="fa-solid fa-plus"></i></h3>
-             <p class="answer">Absolutely! I love creating custom arrangements. You can either
-              visit my boutique or contact me online to discuss your preferences
-              and ideas.</p>
-           </div>
-           <div class="FAQs_card">
-             <h3 class="question">What flowers are in season? <i class="fa-solid fa-plus"></i></h3>
-             <p class="answer">The flowers available vary by season. I always use the freshest
-              and most beautiful blooms that are in season to create my
-              arrangements. Feel free to ask me about seasonal options!</p>
-           </div>
+              delivered the next day.
+            </p>
           </div>
+          <div class="FAQs_card">
+            <h3 class="question">
+              Can I customize my bouquet? <i class="fa-solid fa-plus"></i>
+            </h3>
+            <p class="answer">
+              Absolutely! I love creating custom arrangements. You can either
+              visit my boutique or contact me online to discuss your preferences
+              and ideas.
+            </p>
+          </div>
+          <div class="FAQs_card">
+            <h3 class="question">
+              What flowers are in season? <i class="fa-solid fa-plus"></i>
+            </h3>
+            <p class="answer">
+              The flowers available vary by season. I always use the freshest
+              and most beautiful blooms that are in season to create my
+              arrangements. Feel free to ask me about seasonal options!
+            </p>
+          </div>
+        </div>
       </section>
 
       <section class="review_container">
@@ -486,12 +499,14 @@
           </a>
         </div>
         <div class="footer_logo">
-          <a href="/"><img src="assets/footer_logo_black.png" alt="logo" /></a>
+          <a href="index.html"
+            ><img src="assets/footer_logo_black.png" alt="logo"
+          /></a>
         </div>
-          <ul class="footer_nav">
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
+        <ul class="footer_nav">
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
       </div>
     </footer>
     <script src="script.js"></script>
