--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
           <ul class="navigation">
             <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -122,11 +122,10 @@
             </svg>
           </a>
         </div>
-         <div class="menu_hamburger ">
+        <div class="menu_hamburger">
           <span class="top_line hamburger_line"></span>
           <span class="middle_line hamburger_line"></span>
           <span class="bottom_line hamburger_line"></span>
-
         </div>
       </div>
     </header>
@@ -146,7 +145,6 @@
       <section class="started_container container">
         <div class="how_it_all_started">
           <h2 class="heading">How it all started?</h2>
-          
 
           <div>
             <p class="about_paragraph">
@@ -183,7 +181,7 @@
           </p>
         </div>
       </section>
-      
+
       <section class="contact_form_container">
         <h2 class="heading">Get in touch</h2>
         <form action="#" class="contact_form">
@@ -303,7 +301,9 @@
           </a>
         </div>
         <div class="footer_logo">
-          <a href="/"><img src="assets/footer_logo_black.png" alt="logo" /></a>
+          <a href="index.html"
+            ><img src="assets/footer_logo_black.png" alt="logo"
+          /></a>
         </div>
         <ul class="footer_nav">
           <li><a href="shop.html">Shop</a></li>
@@ -312,6 +312,5 @@
       </div>
     </footer>
     <script src="script.js"></script>
-
   </body>
 </html>
