--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,10 +14,10 @@
         </a>
         <nav>
           <ul class="navigation">
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
         <div class="nav_actions">
@@ -122,11 +122,10 @@
             </svg>
           </a>
         </div>
-         <div class="menu_hamburger ">
+        <div class="menu_hamburger">
           <span class="top_line hamburger_line"></span>
           <span class="middle_line hamburger_line"></span>
           <span class="bottom_line hamburger_line"></span>
-
         </div>
       </div>
     </header>
@@ -294,7 +293,9 @@
           </a>
         </div>
         <div class="footer_logo">
-          <a href="/"><img src="assets/footer_logo_black.png" alt="logo" /></a>
+          <a href="index.html"
+            ><img src="assets/footer_logo_black.png" alt="logo"
+          /></a>
         </div>
         <ul class="footer_nav">
           <li><a href="shop.html">Shop</a></li>
@@ -303,6 +304,5 @@
       </div>
     </footer>
     <script src="script.js"></script>
-
   </body>
 </html>
